// Vitest Snapshot v1

exports[`RoutineCard > should render successfully 1`] = `
<div>
  <div
    class="px-4 py-3 bg-red-50"
    data-testid="routine-card"
  >
    <div
      class="flex h-8 items-center justify-between space-x-3"
    >
      <div
        class="flex max-w-[440px] items-center space-x-3"
      >
        <h3
          class="text-sm font-semibold uppercase text-red-600 truncate"
        >
          Routine 1
           
        </h3>
        <span
          class="text-sm font-medium text-red-400 ml-2 flex-shrink-0 tabular-nums"
        >
          00:00
        </span>
      </div>
      <div
        class="flex flex-shrink-0 items-center space-x-2"
      >
        <button
          class="rounded-md p-1 hover:bg-red-100"
          data-testid="routine-card-minimize"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M14.77 12.79a.75.75 0 01-1.06-.02L10 8.832 6.29 12.77a.75.75 0 11-1.08-1.04l4.25-4.5a.75.75 0 011.08 0l4.25 4.5a.75.75 0 01-.02 1.06z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <ol
      class="space-y-1 pt-1"
      data-testid="routine-card-items"
    >
      <li
        aria-describedby="DndDescribedBy-0"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="flex h-8 w-full items-center justify-between space-x-2 pr-1"
        role="button"
        tabindex="0"
      >
        <div
          class="w-full"
        >
          <div
            class="flex w-full items-center justify-between space-x-3"
          >
            <label
              class="flex-1 truncate font-medium"
              for="routine-1-item-1"
            >
              Item 1
            </label>
            <input
              aria-checked="false"
              class="h-5 w-5 rounded-full border-red-300 text-red-600 focus:ring-red-500"
              id="routine-1-item-1"
              name="routine-1-item-1"
              type="checkbox"
            />
          </div>
        </div>
      </li>
    </ol>
    <div
      id="DndDescribedBy-0"
      style="display: none;"
    >
      
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="DndLiveRegion-0"
      role="status"
      style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
    />
  </div>
</div>
`;

exports[`RoutineCard > should show action button 1`] = `
<div>
  <div
    class="px-4 py-3 bg-red-50"
    data-testid="routine-card"
  >
    <div
      class="flex h-8 items-center justify-between space-x-3"
    >
      <div
        class="flex max-w-[440px] items-center space-x-3"
      >
        <h3
          class="text-sm font-semibold uppercase text-red-600 truncate"
        >
          Routine 1
           
        </h3>
        <span
          class="text-sm font-medium text-red-400 ml-2 flex-shrink-0 tabular-nums"
        >
          00:00
        </span>
      </div>
      <div
        class="flex flex-shrink-0 items-center space-x-2"
      >
        <button
          class="rounded-md px-2 py-1 text-sm hover:bg-red-100 flex-shrink-0"
          data-testid="routine-card-save-items"
        >
          Items
        </button>
        <button
          class="rounded-md p-1 hover:bg-red-100"
          data-testid="routine-card-settings"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 10a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0zM8.5 10a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0zM15.5 8.5a1.5 1.5 0 100 3 1.5 1.5 0 000-3z"
            />
          </svg>
        </button>
        <button
          class="rounded-md p-1 hover:bg-red-100"
          data-testid="routine-card-minimize"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M14.77 12.79a.75.75 0 01-1.06-.02L10 8.832 6.29 12.77a.75.75 0 11-1.08-1.04l4.25-4.5a.75.75 0 011.08 0l4.25 4.5a.75.75 0 01-.02 1.06z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <ol
      class="space-y-1 pt-1"
      data-testid="routine-card-items"
    >
      <li
        aria-describedby="DndDescribedBy-1"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="flex h-8 w-full items-center justify-between space-x-2 pr-1"
        role="button"
        tabindex="0"
      >
        <div
          class="w-full"
        >
          <div
            class="flex w-full items-center justify-between space-x-3"
          >
            <label
              class="flex-1 truncate font-medium"
              for="routine-1-item-1"
            >
              Item 1
            </label>
            <input
              aria-checked="false"
              class="h-5 w-5 rounded-full border-red-300 text-red-600 focus:ring-red-500"
              id="routine-1-item-1"
              name="routine-1-item-1"
              type="checkbox"
            />
          </div>
        </div>
      </li>
    </ol>
    <div
      id="DndDescribedBy-1"
      style="display: none;"
    >
      
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="DndLiveRegion-1"
      role="status"
      style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
    />
  </div>
</div>
`;

exports[`RoutineCard > should show sort handle 1`] = `
<div>
  <div
    class="px-4 py-3 bg-red-50"
    data-testid="routine-card"
  >
    <div
      class="flex h-8 items-center justify-between space-x-3"
    >
      <div
        class="flex max-w-[440px] items-center space-x-3"
      >
        <h3
          class="text-sm font-semibold uppercase text-red-600 truncate"
        >
          Routine 1
           
        </h3>
        <span
          class="text-sm font-medium text-red-400 ml-2 flex-shrink-0 tabular-nums"
        >
          00:00
        </span>
      </div>
      <div
        class="flex flex-shrink-0 items-center space-x-2"
      >
        <button
          class="rounded-md p-1 hover:bg-red-100"
          data-testid="routine-card-minimize"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M14.77 12.79a.75.75 0 01-1.06-.02L10 8.832 6.29 12.77a.75.75 0 11-1.08-1.04l4.25-4.5a.75.75 0 011.08 0l4.25 4.5a.75.75 0 01-.02 1.06z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <ol
      class="space-y-1 pt-1"
      data-testid="routine-card-items"
    >
      <li
        aria-describedby="DndDescribedBy-2"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="flex h-8 w-full items-center justify-between space-x-2 pr-1"
        role="button"
        tabindex="0"
      >
        <button
          class="-ml-1.5 flex-grow-0 p-1.5"
          data-testid="routine-item-handle"
        >
          <svg
            class="h-4 w-4 text-neutral-500"
            fill="currentColor"
            viewBox="0 0 20 20"
            width="12"
          >
            <path
              d="M7 2a2 2 0 1 0 .001 4.001A2 2 0 0 0 7 2zm0 6a2 2 0 1 0 .001 4.001A2 2 0 0 0 7 8zm0 6a2 2 0 1 0 .001 4.001A2 2 0 0 0 7 14zm6-8a2 2 0 1 0-.001-4.001A2 2 0 0 0 13 6zm0 2a2 2 0 1 0 .001 4.001A2 2 0 0 0 13 8zm0 6a2 2 0 1 0 .001 4.001A2 2 0 0 0 13 14z"
            />
          </svg>
        </button>
        <div
          class="w-full max-w-[calc(100%-theme(spacing.8))]"
        >
          <div
            class="flex w-full items-center justify-between space-x-3"
          >
            <label
              class="flex-1 truncate font-medium"
              for="routine-1-item-1"
            >
              Item 1
            </label>
            <input
              aria-checked="false"
              class="h-5 w-5 rounded-full border-red-300 text-red-600 focus:ring-red-500"
              id="routine-1-item-1"
              name="routine-1-item-1"
              type="checkbox"
            />
          </div>
        </div>
      </li>
    </ol>
    <div
      id="DndDescribedBy-2"
      style="display: none;"
    >
      
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="DndLiveRegion-2"
      role="status"
      style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
    />
  </div>
</div>
`;
